--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "services"
   ],
   "dependencies": {
-    "rss-parser": "^3.12.0",
-    "@types/uuid": "^8.3.4"
+    "@types/axios": "^0.14.0",
+    "@types/uuid": "^8.3.4",
+    "rss-parser": "^3.12.0"
   }
 }
