--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "test": "sst load-config -- vitest run"
   },
   "devDependencies": {
-    "@serverless-stack/cli": "^1.15.8",
-    "@serverless-stack/resources": "^1.15.8",
+    "@serverless-stack/cli": "^1.17.1",
+    "@serverless-stack/node": "^1.17.1",
+    "@serverless-stack/resources": "^1.17.1",
     "@tsconfig/node16": "^1.0.3",
-    "aws-cdk-lib": "2.39.1",
+    "aws-cdk-lib": "2.50.0",
     "typescript": "^4.8.4",
     "vitest": "^0.23.4"
   },
@@ -23,8 +24,8 @@
     "services"
   ],
   "dependencies": {
-    "@types/axios": "^0.14.0",
     "@types/uuid": "^8.3.4",
+    "axios": "^1.1.3",
     "rss-parser": "^3.12.0"
   }
 }
